websample/web-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: webnamespace
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    external-dns.alpha.kubernetes.io/hostname: $YOUR_DOMAIN
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - $YOUR_DOMAIN
    secretName: web-tls
  rules:
  - host: $YOUR_DOMAIN
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
